...
                      icon: Icon(Icons.home_outlined),
                      selectedIcon: Icon(Icons.home),
                      label: 'Home',
                    ),
                    NavigationDestination(
                      icon: Icon(Icons.grid_view_outlined),
                      label: 'Gyms',
                    ),
                    NavigationDestination(
                      icon: Icon(Icons.bar_chart_outlined),
                      label: 'Board',
                    ),
                    NavigationDestination(
                      icon: Icon(Icons.calendar_today_outlined),
                      label: 'Compete',
                    ),
                    NavigationDestination(
                      icon: Icon(Icons.person_outline),
                      label: 'Me',
                    ),
                  ],
                ),
              ),
            ),
          ),
...
